--- a/html/pagina3.html
+++ b/html/pagina3.html
@@ -6,35 +6,47 @@
     <title>Trabalho</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
-
-    <!-- Codificar um documento em HTML para apresentar os dados do seu currículo (se preferir, apresente
-        informações fictícias). Para tanto, utilize CSS para realizar a customização dos elementos através de
-        classes de estilos. Para o posicionamento dos elementos utilize obrigatoriamente os recursos de
-        boxmodel, flutuação e a biblioteca Bootstrap. Observação: elementos HTML que deverão ser
-        utilizados obrigatoriamente: div, labels, ul, ol, span, p, a e img. Os dados deverão ser
-        agrupados/organizados em abas, exemplo: dados cadastrais, formação, experiência profissional
-        cursos complementares, idiomas e outras informações/habilidades. Exemplos para a utilização da
-        biblioteca -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <ul class="nav nav-pills bg-secondary">
+        <li class="nav-item">
+          <a class="nav-link active text-white bg-dark" aria-current="page" href="/index.html">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/html/pagina2.html">Formação</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="/html/pagina3.html">Experiência Profissional</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-white" href="/html/pagina4.html">Dados complementares</a>
+        </li>
+    </ul>
     <br>
-    <div>
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Sobre</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/html/pagina2.html">Formação</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/html/pagina3.html">Experiência Proficional</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/html/pagina4.html">Dados complementares</a>
-            </li>
-        </ul>
+
+    <div class="container">
+        
+
+        <footer class="mt-5">
+            <div id="area-contato" class="text-center">
+                <h3 class="titulo mb-3">Entre em Contato Comigo!</h3>
+                <div class="d-flex justify-content-center">
+                    <div class="p-3 text-dark">
+                        <img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/>
+                        <p><span class="contato-1">Ligue para:</span> (54) 9-9915-8852</p>
+                    </div>
+                    <div class="p-3 text-dark">
+                        <a href="https://github.com/ana-paula-andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/github--v1.png" alt="github--v1"/></a>
+                        <p><span class="contato-1">Me acompanhe no GitHub!</span></p>
+                    </div>
+                    <div class="p-3 text-dark">
+                        <a href="https://www.instagram.com/ana_andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/instagram-new--v1.png" alt="instagram-new--v1"/></a>
+                        <p><span class="contato-1">Novidades no Instagram!</span></p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
-
-
 </body>
 </html>
