--- a/html/pagina4.html
+++ b/html/pagina4.html
@@ -25,24 +25,53 @@
     </ul>
     <br>
 
-    <div class="container">
-        
+    <div class="container mt-5">
+        <h1 class="fw-bold">Dados Complementares</h1>
+        <div class="mb-4">
 
+            <label for="nome" class="form-label fw-bold">Nome Completo:</label>
+            <p id="nome">Ana Paula de Oliveira Andreis</p>
+
+            <label for="endereco" class="form-label fw-bold">Endereço:</label>
+            <p id="endereco">Passo Fundo - Rio Grande do Sul</p>
+
+            <label for="idade" class="form-label fw-bold">Idade:</label>
+            <p id="idade">18 anos</p>
+
+            <label for="E-mail" class="form-label fw-bold">E-mail:</label>
+            <p id="email">anaandreis.pf007@academico.ifsul.edu.brl</p>
+
+            <label for="perfil" class="form-label fw-bold">Estudante:</label>
+            <p id="perfil">Instituto Federal Sul Rio-Grandense</p>
+
+            <ul>
+                <li><strong>Idiomas:</strong> Inglês (avançado), Espanhol (intermediário)</li>
+                <li><strong>Certificações:</strong> Certificação em Gestão de Projetos (PMP), Certificação em Excel Avançado</li>
+                <li><strong>Habilidades Técnicas:</strong> Conhecimento em SQL, Python e ferramentas de visualização de dados como Power BI</li>
+                <li><strong>Interesses:</strong> Tecnologia, sustentabilidade e voluntariado</li>
+                <li><strong>Projetos Relevantes:</strong> Desenvolvimento de um sistema de gerenciamento de estoque para a empresa XYZ</li>
+                <li><strong>Participação em Eventos:</strong> Participação em seminários de logística e gestão de cadeias de suprimentos</li>
+                <li><strong>Soft Skills:</strong> Habilidades de comunicação, trabalho em equipe e liderança</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container">
         <footer class="mt-5">
             <div id="area-contato" class="text-center">
                 <h3 class="titulo mb-3">Entre em Contato Comigo!</h3>
                 <div class="d-flex justify-content-center">
                     <div class="p-3 text-dark">
                         <img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/>
-                        <p><span class="contato-1">Ligue para:</span> (54) 9-9915-8852</p>
+                        <p><span class="fw-bold">Ligue para:</span> (54) 9-9915-8852</p>
                     </div>
                     <div class="p-3 text-dark">
                         <a href="https://github.com/ana-paula-andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/github--v1.png" alt="github--v1"/></a>
-                        <p><span class="contato-1">Me acompanhe no GitHub!</span></p>
+                        <p><span class="fw-bold">Me acompanhe no GitHub!</span></p>
                     </div>
                     <div class="p-3 text-dark">
                         <a href="https://www.instagram.com/ana_andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/instagram-new--v1.png" alt="instagram-new--v1"/></a>
-                        <p><span class="contato-1">Novidades no Instagram!</span></p>
+                        <p><span class="fw-bold">Novidades no Instagram!</span></p>
                     </div>
                 </div>
             </div>
