--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             informações fictícias). Para tanto, utilize CSS para realizar a customização dos elementos através de
             classes de estilos. Para o posicionamento dos elementos utilize obrigatoriamente os recursos de
             boxmodel, flutuação e a biblioteca Bootstrap. Observação: elementos HTML que deverão ser
-            utilizados obrigatoriamente: div(feito), labels, ul(feito), ol(), span(feito), p(feito), a(feito) e img(feito). Os dados deverão ser
+            utilizados obrigatoriamente: div(feito), labels(feito), ul(feito), ol(feito), span(feito), p(feito), a(feito) e img(feito). Os dados deverão ser
             agrupados/organizados em abas, exemplo: dados cadastrais, formação, experiência profissional
             cursos complementares, idiomas e outras informações/habilidades. Exemplos para a utilização da
             biblioteca: -->
@@ -42,9 +42,9 @@
                 <div class="habilidades mt-4">
                     <h2 class="fw-bold">Minhas Habilidades</h2>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-code"></i> Programação em Python</li>
-                        <li><i class="fas fa-database"></i> Gestão de Bancos de Dados</li>
-                        <li><i class="fas fa-network-wired"></i> Redes e Infraestrutura</li>
+                        <li> Programação em Python</li>
+                        <li> Gestão de Bancos de Dados</li>
+                        <li> Redes e Infraestrutura</li>
                     </ul>
                 </div>
             </div>
