--- a/html/pagina2.html
+++ b/html/pagina2.html
@@ -25,8 +25,43 @@
     </ul>
     <br>
 
-    <div class="container">
+    <div class="container mt-5">
         
+        <div>
+            <h1 class="fw-bold mb-3 mt-4">Formações</h1>
+            <div class="text-dark text-start p-3">
+                <p class="mb-5">Minha trajetória acadêmica reflete um compromisso contínuo com a busca por conhecimento em diversas áreas, desde o ensino
+                fundamental até a formação superior, sempre com o objetivo de aprimorar habilidades e expandir horizontes</p>
+                </div>
+            <div class="container-icons d-flex justify-content-center mb-4">
+                <div class="p-3 text-dark text-center">
+                    <img class="icons" width="64" height="64" src="https://img.icons8.com/glyph-neue/64/school-building.png" alt="school-building"/>
+                    <p>Ensino Fundamental - Escola Wolmar Salton</p>
+                </div>
+                <div class="p-3 text-dark text-center">
+                    <img class="icons" width="64" height="64" src="https://img.icons8.com/glyph-neue/64/graduation-cap.png" alt="graduation-cap"/>
+                    <p>Ensino Médio Técnico em Informática - IFSUL</p>
+                </div>
+                <div class="p-3 text-dark text-center">
+                    <img class="icons" width="64" height="64" src="https://img.icons8.com/glyph-neue/64/university.png" alt="university"/>
+                    <p>Bacharelado em Ciência da Computação - IFSUL</p>
+                </div>
+            </div>
+            <div class="container-icons d-flex justify-content-center mb-4 mt-5">
+                <div class="p-3 text-dark text-center">
+                    <img class="icons" width="64" height="64" src="https://img.icons8.com/fluency-systems-filled/64/syllabus.png" alt="syllabus"/>
+                    <p>Gestão e Administração Empresarial - New Life</p>
+                </div>
+                <div class="p-3 text-dark text-center">
+                    <img width="64" height="64" src="https://img.icons8.com/glyph-neue/64/book--v1.png" alt="book--v1"/>
+                    <p>Conversação em Inglês Intermediário - New Life</p>
+                </div>
+                <div class="p-3 text-dark text-center">
+                    <img class="icons" width="64" height="64" src="https://img.icons8.com/ios-filled/64/read.png" alt="read"/>
+                    <p>Curso de Informática Básica - New Life</p>
+                </div>
+            </div>
+        </div>
 
         <footer class="mt-5">
             <div id="area-contato" class="text-center">
@@ -34,15 +69,15 @@
                 <div class="d-flex justify-content-center">
                     <div class="p-3 text-dark">
                         <img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/>
-                        <p><span class="contato-1">Ligue para:</span> (54) 9-9915-8852</p>
+                        <p><span class="fw-bold">Ligue para:</span> (54) 9-9915-8852</p>
                     </div>
                     <div class="p-3 text-dark">
                         <a href="https://github.com/ana-paula-andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/github--v1.png" alt="github--v1"/></a>
-                        <p><span class="contato-1">Me acompanhe no GitHub!</span></p>
+                        <p><span class="fw-bold">Me acompanhe no GitHub!</span></p>
                     </div>
                     <div class="p-3 text-dark">
                         <a href="https://www.instagram.com/ana_andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/instagram-new--v1.png" alt="instagram-new--v1"/></a>
-                        <p><span class="contato-1">Novidades no Instagram!</span></p>
+                        <p><span class="fw-bold">Novidades no Instagram!</span></p>
                     </div>
                 </div>
             </div>
