--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             informações fictícias). Para tanto, utilize CSS para realizar a customização dos elementos através de
             classes de estilos. Para o posicionamento dos elementos utilize obrigatoriamente os recursos de
             boxmodel, flutuação e a biblioteca Bootstrap. Observação: elementos HTML que deverão ser
-            utilizados obrigatoriamente: div(feito), labels(feito), ul(feito), ol(feito), span(feito), p(feito), a(feito) e img(feito). Os dados deverão ser
+            utilizados obrigatoriamente: div(feito), labels(feito), ul(feito), ol(feito), span(feito), p(feito), 
+            a(feito) e img(feito). Os dados deverão ser
             agrupados/organizados em abas, exemplo: dados cadastrais, formação, experiência profissional
             cursos complementares, idiomas e outras informações/habilidades. Exemplos para a utilização da
             biblioteca: -->
@@ -63,8 +64,8 @@
                 <h3 class="titulo mb-3">Entre em Contato Comigo!</h3>
                 <div class="d-flex justify-content-center">
                     <div class="p-3 text-dark">
-                        <img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/>
-                        <p><span class="fw-bold">Ligue para:</span> (54) 9-9915-8852</p>
+                        <a href="https://api.whatsapp.com/send/?phone=5554999158852&text&type=phone_number&app_absent=0"><img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/></a>
+                        <p><span class="fw-bold">Me contate!</span></p>
                     </div>
                     <div class="p-3 text-dark">
                         <a href="https://github.com/ana-paula-andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/github--v1.png" alt="github--v1"/></a>
