--- a/html/pagina4.html
+++ b/html/pagina4.html
@@ -49,7 +49,7 @@
                 <li><strong>Certificações:</strong> Certificação em Gestão de Projetos (PMP), Certificação em Excel Avançado</li>
                 <li><strong>Habilidades Técnicas:</strong> Conhecimento em SQL, Python e ferramentas de visualização de dados como Power BI</li>
                 <li><strong>Interesses:</strong> Tecnologia, sustentabilidade e voluntariado</li>
-                <li><strong>Projetos Relevantes:</strong> Desenvolvimento de um sistema de gerenciamento de estoque para a empresa XYZ</li>
+                <li><strong>Projetos Relevantes:</strong> Desenvolvimento de um sistema de gerenciamento de estoque para a empresa vivara</li>
                 <li><strong>Participação em Eventos:</strong> Participação em seminários de logística e gestão de cadeias de suprimentos</li>
                 <li><strong>Soft Skills:</strong> Habilidades de comunicação, trabalho em equipe e liderança</li>
             </ul>
@@ -62,8 +62,8 @@
                 <h3 class="titulo mb-3">Entre em Contato Comigo!</h3>
                 <div class="d-flex justify-content-center">
                     <div class="p-3 text-dark">
-                        <img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/>
-                        <p><span class="fw-bold">Ligue para:</span> (54) 9-9915-8852</p>
+                        <a href="https://api.whatsapp.com/send/?phone=5554999158852&text&type=phone_number&app_absent=0"><img width="50" height="50" src="https://img.icons8.com/ios/50/phone--v1.png" alt="phone--v1"/></a>
+                        <p><span class="fw-bold">Me contate!</span></p>
                     </div>
                     <div class="p-3 text-dark">
                         <a href="https://github.com/ana-paula-andreis"><img width="50" height="50" src="https://img.icons8.com/ios/50/github--v1.png" alt="github--v1"/></a>
