--- a/home.html
+++ b/home.html
@@ -20,42 +20,43 @@
 <body>
     <ul class="nav nav-pills bg-secondary">
         <li class="nav-item">
-          <a class="nav-link active text-white bg-dark" aria-current="page" href="/index.html">Sobre</a>
+          <a class="nav-link active text-white bg-dark" aria-current="page" href="/home.html">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/html/pagina2.html">Formação</a>
+          <a class="nav-link text-white" href="/html/formacao.html">Formação</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/html/pagina3.html">Experiência Profissional</a>
+          <a class="nav-link text-white" href="/html/experiencia.html">Experiência Profissional</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="/html/pagina4.html">Dados complementares</a>
+            <a class="nav-link text-white" href="/html/dados.html">Dados complementares</a>
         </li>
     </ul>
     <br>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-3 text-center">
-                <div class="foto">
-                    <img src="/img/fotoperfil.jpeg" alt="Perfil" class="rounded-circle shadow-lg">
+    <div id="home" class="container mt-1">
+            <div class="row">
+                <div class="col-sm-3 text-center">
+                    <div class="foto">
+                        <img src="/img/fotoperfil.jpeg" alt="Perfil" class="rounded-circle shadow-lg">
+                    </div>
+                    <div class="habilidades mt-4">
+                        <h2 class="fw-bold">Minhas Habilidades</h2>
+                        <ul>
+                            <li> Programação em Python</li>
+                            <li> Gestão de Bancos de Dados</li>
+                            <li> Redes e Infraestrutura</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="habilidades mt-4">
-                    <h2 class="fw-bold">Minhas Habilidades</h2>
-                    <ul class="list-unstyled">
-                        <li> Programação em Python</li>
-                        <li> Gestão de Bancos de Dados</li>
-                        <li> Redes e Infraestrutura</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-9">
-                <h1 class="mb-3 fw-bold">Sobre Mim</h1>
-                <p>Meu nome é <span class="fw-bold">Ana Paula</span>, sou uma mulher de 18 anos, natural de Passo Fundo, uma cidade localizada no estado do Rio Grande do Sul. Ao longo da minha vida, tive o privilégio de crescer e estudar em escolas públicas, onde pude aprender lições não apenas acadêmicas, mas também sobre a importância da perseverança e do esforço contínuo. A educação pública me deu uma perspectiva única sobre os desafios e as oportunidades que muitos estudantes enfrentam no dia a dia, e isso moldou parte da pessoa que sou hoje.</p>
-                
-                <p>Foi durante o meu percurso escolar que comecei a explorar diferentes áreas de interesse. No início, como muitos jovens, eu estava incerta sobre qual carreira seguir. No entanto, com o tempo, fui me interessando cada vez mais pela tecnologia e descobri uma verdadeira paixão pela área da informática. Esse campo me trouxe não só fascínio, mas também um novo sentido de propósito. A tecnologia, para mim, representa inovação e o poder de transformar o mundo ao nosso redor. Através da informática, sinto que posso criar, resolver problemas complexos e, eventualmente, fazer a diferença na vida das pessoas.</p>
+                <div class="col-sm">
+                    <h1 class="mt-3 fw-bold">Sobre Mim</h1>
+                    <p>Meu nome é <span class="fw-bold">Ana Paula</span>, sou uma mulher de 18 anos, natural de Passo Fundo, uma cidade localizada no estado do Rio Grande do Sul. Ao longo da minha vida, tive o privilégio de crescer e estudar em escolas públicas, onde pude aprender lições não apenas acadêmicas, mas também sobre a importância da perseverança e do esforço contínuo. A educação pública me deu uma perspectiva única sobre os desafios e as oportunidades que muitos estudantes enfrentam no dia a dia, e isso moldou parte da pessoa que sou hoje.</p>
+                    
+                    <p>Foi durante o meu percurso escolar que comecei a explorar diferentes áreas de interesse. No início, como muitos jovens, eu estava incerta sobre qual carreira seguir. No entanto, com o tempo, fui me interessando cada vez mais pela tecnologia e descobri uma verdadeira paixão pela área da informática. Esse campo me trouxe não só fascínio, mas também um novo sentido de propósito. A tecnologia, para mim, representa inovação e o poder de transformar o mundo ao nosso redor. Através da informática, sinto que posso criar, resolver problemas complexos e, eventualmente, fazer a diferença na vida das pessoas.</p>
 
-                <p>No futuro, pretendo expandir ainda mais meus conhecimentos em desenvolvimento de software e outras áreas da tecnologia, buscando sempre contribuir de forma positiva para o mundo.</p>
+                    <p>No futuro, pretendo expandir ainda mais meus conhecimentos em desenvolvimento de software e outras áreas da tecnologia, buscando sempre contribuir de forma positiva para o mundo.</p>
+                </div>
             </div>
         </div>
 
@@ -78,6 +79,5 @@
                 </div>
             </div>
         </footer>
-    </div>
 </body>
 </html>
