--- a/html/dados.html
+++ b/html/dados.html
@@ -11,21 +11,21 @@
 <body>
     <ul class="nav nav-pills bg-secondary">
         <li class="nav-item">
-          <a class="nav-link active text-white bg-dark" aria-current="page" href="/index.html">Sobre</a>
+          <a class="nav-link active text-white bg-dark" aria-current="page" href="/home.html">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/html/pagina2.html">Formação</a>
+          <a class="nav-link text-white" href="/html/formacao.html">Formação</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/html/pagina3.html">Experiência Profissional</a>
+          <a class="nav-link text-white" href="/html/experiencia.html">Experiência Profissional</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="/html/pagina4.html">Dados complementares</a>
+            <a class="nav-link text-white" href="/html/dados.html">Dados complementares</a>
         </li>
     </ul>
     <br>
 
-    <div class="container mt-5">
+    <div class="container mt-1">
         <h1 class="fw-bold">Dados Complementares</h1>
         <div class="mb-4">
 
