--- a/html/formacao.html
+++ b/html/formacao.html
@@ -11,24 +11,24 @@
 <body>
     <ul class="nav nav-pills bg-secondary">
         <li class="nav-item">
-          <a class="nav-link active text-white bg-dark" aria-current="page" href="/index.html">Sobre</a>
+          <a class="nav-link active text-white bg-dark" aria-current="page" href="/home.html">Sobre</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/html/pagina2.html">Formação</a>
+          <a class="nav-link text-white" href="/html/formacao.html">Formação</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/html/pagina3.html">Experiência Profissional</a>
+          <a class="nav-link text-white" href="/html/experiencia.html">Experiência Profissional</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white" href="/html/pagina4.html">Dados complementares</a>
+            <a class="nav-link text-white" href="/html/dados.html">Dados complementares</a>
         </li>
     </ul>
     <br>
 
-    <div class="container mt-5">
+    <div class="container mt-1">
         
         <div>
-            <h1 class="fw-bold mb-3 mt-4">Formações</h1>
+            <h1 class="fw-bold mb-3">Formações</h1>
             <div class="text-dark text-start p-3">
                 <p class="mb-5">Minha trajetória acadêmica reflete um compromisso contínuo com a busca por conhecimento em diversas áreas, desde o ensino
                 fundamental até a formação superior, sempre com o objetivo de aprimorar habilidades e expandir horizontes</p>
